--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>jersey-container-grizzly2-http</artifactId>
             <version>2.0-m05-2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
